--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap"
       rel="stylesheet"
@@ -41,10 +41,10 @@
         We are team of talented designers making websites with Bootstrap
       </h4>
       <button class="main-btn">Get Started</button>
-      <img src="/hero-img.svg" alt="" height="750px" width="625px" />
+      <img src="/css/hero-img.svg" alt="" height="750px" width="625px" />
     </main>
     <div class="container">
-      <img src="/about-img.svg" alt="" height="625px" width="525px" />
+      <img src="/css/about-img.svg" alt="" height="625px" width="525px" />
       <h2 class="con-h2">Voluptatem dignissimos provident quasi</h2>
       <h5 class="con-h5">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -267,7 +267,7 @@
       </div>
     </div>
     <footer>
-      <img src="/logo..png" alt="" height="30px" width="200px" />
+      <img src="/css/logo..png" alt="" height="30px" width="200px" />
       <p class="f-p">
         High quality free Bootstrap website templates. Build your next website
         with our modern and fully responsive web templates!
